# xavier-robot

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
src/: cameras.rs  drivetrain.rs  geometry.rs  icp.rs  lidar.rs  main.rs  odometry.rs  paths.rs  pose_estimator.rs  pose_graph.rs  utils.rs  ws.rs
