[package]
name = "xavier-robot"
version = "0.1.0"
edition = "2021"

[dependencies]
apriltag = "0.4.0"
assert_approx_eq = "1.1.0"
image = "0.25.5"
nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serial = "5.4.5"

[dependencies.nokhwa]
version = "0.10.0"
features = ["input-native", "output-threaded"]

[dependencies.apriltag-image]
version = "0.1.0"
path = "../apriltag-image"
